--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["demo"],
-  "include": ["src"],
+  "include": ["src", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
