--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "license": "ISC",
   "private": false,
-  "version": "1.0.15",
+  "version": "1.0.30",
   "type": "module",
-  "types": "dist",
+  "types": "./dist/Table.d.ts",
   "repository": {
     "url": "https://github.com/koladei/advanced-react-table.git"
   },
@@ -19,37 +19,59 @@
     "name": "Kolade Ige",
     "email": "kolade.ige@gmail.com"
   },
-  "main": "src/index.ts",
-  "source": "src/index.ts",
+  "main": "./dist/lib.umd.js",
+  "module": "./dist/lib.es.js",
+  "files": ["dist", "README.md", "src"],
+  "source": "src",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
     "@stylexjs/babel-plugin": "^0.4.1",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.53.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitest/coverage-v8": "^0.34.6",
+    "babel-jest": "^29.7.0",
+    "c8": "^9.0.0",
+    "envalid": "^8.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
+    "msw": "^1.3.2",
     "path": "^0.12.7",
-    "sass": "^1.69.6",
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.69.0",
     "styled-jsx": "^5.1.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-plugin-checker": "^0.6.2",
     "vite-plugin-dts": "^3.7.0",
-    "vite-plugin-stylex": "^0.4.1"
+    "vite-plugin-stylex": "^0.4.1",
+    "vitest": "^0.34.6"
   }
 }
