--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"]
   },
   "exclude": ["demo"],
-  "include": ["src", "dist"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
